<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo7"
    android:orientation="vertical"
    tools:context="com.danielescobar.calculadora1.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rCuadrado"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/cuadrado"
                    android:textSize="25sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/rCirculo"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/circulo"
                    android:textSize="25sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/rTriangulo"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Triangulo"
                    android:textSize="25sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/rCubo"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/cubo"
                    android:textSize="25sp"
                    android:textStyle="italic" />
            </RadioGroup>
            <LinearLayout
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/elado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/eAltura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:visibility="invisible" />
                <EditText
                    android:id="@+id/eBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:visibility="invisible" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tPerimetro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perimetro"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:visibility="invisible"/>

                <EditText
                    android:id="@+id/ePerimetro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:visibility="invisible"/>

                <EditText
                    android:id="@+id/eArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:visibility="invisible" />
                <TextView
                    android:id="@+id/tVolumen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volumen"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:visibility="invisible"/>

                <EditText
                    android:id="@+id/eVolumnen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:visibility="invisible" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/bCalcular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:background="@color/cadetblue"
            android:onClick="onButtonClicked"
            android:text="@string/calcular"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>






